--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "framer-motion": "^11.5.4",
+    "framer-motion": "^11.11.8",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-intersection-observer": "^9.13.1",
     "react-router-dom": "^6.26.2",
+    "react-simple-typewriter": "^5.0.1",
     "sort-by": "^0.0.2"
   },
   "devDependencies": {
