--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "start": "node -r esm your-script.js",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
+    "esm": "^3.2.25",
     "framer-motion": "^11.11.8",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
