--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "esm": "^3.2.25",
     "framer-motion": "^11.11.8",
     "localforage": "^1.10.0",
+    "lucide-react": "^0.501.0",
     "match-sorter": "^6.3.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
