--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "localforage": "^1.10.0",
     "lucide-react": "^0.501.0",
     "match-sorter": "^6.3.4",
+    "motion": "^12.9.2",
+    "motion-plus": "^0.1.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
